prevent wrap on special-price in account.php in responsive Template
git-svn-id: https://svn.modified-shop.org/svn/modified-shop/trunk@12648 79ac0487-9261-4f26-a34d-858dee0dcce0

--- a/templates/tpl_modified_responsive/stylesheet.css
+++ b/templates/tpl_modified_responsive/stylesheet.css
@@ -4533,6 +4533,9 @@ ul.historylist li.first {
   display:block;
   font-size:11px;
 }
+.hl_price .value_price {
+  white-space:nowrap;
+}
 /* END Last viewed in account */
 
 
